Issue-2191: Changed List to Immutable list
Signed-off-by: a6dulaleem <abdul.aleem1@dell.com>