@@ -15,11 +15,11 @@
  */
 package io.pravega.test.system.framework.services.kubernetes;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import io.kubernetes.client.openapi.models.V1ClusterRoleBinding;
 import io.kubernetes.client.openapi.models.V1Container;
 import io.kubernetes.client.openapi.models.V1ContainerStatus;
-import io.kubernetes.client.openapi.models.V1HostAlias;
 import io.kubernetes.client.openapi.models.V1ObjectMeta;
 import io.kubernetes.client.openapi.models.V1PersistentVolumeClaimVolumeSource;
 import io.kubernetes.client.openapi.models.V1Pod;
@@ -37,7 +37,6 @@ import io.pravega.test.system.framework.Utils;
 import io.pravega.test.system.framework.kubernetes.ClientFactory;
 import io.pravega.test.system.framework.kubernetes.K8sClient;
 
-import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
@@ -131,18 +130,18 @@ public class K8SequentialExecutor implements TestExecutor {
         V1Pod pod =  new V1Pod()
                 .metadata(new V1ObjectMeta().name(podName).namespace(NAMESPACE).labels(ImmutableMap.of("POD_NAME", podName, "app", APP)))
                 .spec( new V1PodSpec().serviceAccountName(SERVICE_ACCOUNT).automountServiceAccountToken(true)
-                        .volumes(List.of(new V1Volume().name("task-pv-storage")
+                        .volumes(ImmutableList.of(new V1Volume().name("task-pv-storage")
                                 .persistentVolumeClaim(new V1PersistentVolumeClaimVolumeSource().claimName("task-pv-claim"))
                         ))
-                        .containers( List.of( new V1Container()
+                        .containers( ImmutableList.of( new V1Container()
                                 .name(podName) // container name is same as that of the pod.
                                 .image(TEST_POD_IMAGE)
                                 .imagePullPolicy("IfNotPresent")
-                                .command(List.of("/bin/sh"))
-                                .args( List.of("-c", "java" +
+                                .command(ImmutableList.of("/bin/sh"))
+                                .args( ImmutableList.of("-c", "java" +
                                         getArgs() +
                                         " -cp /data/test-collection.jar io.pravega.test.system.SingleJUnitTestRunner " + className + "#" + methodName /*+ " > server.log 2>&1 */ + "; exit $?"))
-                                .volumeMounts(List.of(new V1VolumeMount().mountPath("/data").name("task-pv-storage")))
+                                .volumeMounts(ImmutableList.of(new V1VolumeMount().mountPath("/data").name("task-pv-storage")))
                         ))
                         .restartPolicy("Never"));
         if (Utils.TLS_AND_AUTH_ENABLED) {
@@ -222,7 +221,7 @@ public class K8SequentialExecutor implements TestExecutor {
                 .metadata(new V1ObjectMeta()
                         .name(CLUSTER_ROLE_BINDING)
                         .namespace(NAMESPACE))
-                .subjects(List.of(new V1Subject().kind("ServiceAccount")
+                .subjects(ImmutableList.of(new V1Subject().kind("ServiceAccount")
                         .name(SERVICE_ACCOUNT)
                         .namespace(NAMESPACE)))
                 .roleRef(new V1RoleRef().kind("ClusterRole")
